chore(deps): Update robolectric to v4.17 (#1352)
* chore(deps): Update robolectric to v4.17

* chore: Remove Robolectric SDK 36 overrides

* Configure test tasks to open internal Java modules

* chore(deps): Align shadows-framework version with Robolectric

* Remove the standalone shadowsFramework version definition
* Use the robolectric version reference for shadows-framework

* Group Robolectric dependencies

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Thomas Kioko <kiokotomas@gmail.com>